Fix build issue with change https://codereview.chromium.org/1922903002

M51 was toDOMWindow not toLocalDOMWindow()

BUG=605147

(cherry picked from commit de64386e2218c169d27f5f9879515c8d2c7511e2)

Review URL: https://codereview.chromium.org/1918313002 .

Cr-Commit-Position: refs/branch-heads/2704@{#249}
Cr-Branched-From: 6e53600def8f60d8c632fadc70d7c1939ccea347-refs/heads/master@{#386251}